--- a/index.html
+++ b/index.html
@@ -7,32 +7,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 </head>
 <body>
-    <!-- <center>    comment this html center tag now we use css for designing and formating our website--> 
-        <div class="talha" class="font-effect-fire">M.TALHA.Rehman</div>
-  
-    <hr>
-   
-    <p>
-        <a href="home.html" target="_blank">Home</a>
-        <a href="menu.html" target="_blank">Menu</a>
-        <a href="about us.html" target="_blank">About Us</a>
-        <a href="timing.html" target="_blank">Timing</a>
-        <a href="contact.html" target="_blank">Contact Us</a>    
-    </p>
-
-<hr>
-
-<h2>We server Delicious fast food items </h2>
-
-<img src="images/home1.jpg" alt="food img" height="150px">
-<img src="images/home2.jpeg" alt="2nd food images" height="150px">
-<img src="images/home3.jpg" alt="3rd food images" height="150px">
-<br>
-<button><a href="menu.html">See our menu</a></button>
-
-<hr>
-
-    <p>Copyright &copy;2021 M.Talha.Rehman</p>
-
+  <h1>hello world</h1>
 </body>
 </html>
